home alimentada pelo cms

--- a/resources/js/Pages/Home/components/Projects/Projects.scss
+++ b/resources/js/Pages/Home/components/Projects/Projects.scss
@@ -65,6 +65,7 @@
           }
           p{
             text-transform: initial;
+            text-align: left;
             font-size: 16px;
             line-height: 19px;
             color: #555454;
