--- a/resources/js/Pages/Venture/components/VentureGalery/VentureGalery.scss
+++ b/resources/js/Pages/Venture/components/VentureGalery/VentureGalery.scss
@@ -34,6 +34,7 @@
         .swiper{
           border-radius: 4px;
           overflow: hidden;
+          padding: 0 0 30px;
 
           .swiper_item{
             .item{
@@ -63,6 +64,9 @@
               }
             }
           }
+        }
+        .swiper-pagination{
+          bottom: 0 !important;
         }
         .arrows{
           position: absolute;
