pagina sobre finalizada

--- a/resources/js/Pages/AboutUs/components/MissionVisionValues/MissionVisionValues.scss
+++ b/resources/js/Pages/AboutUs/components/MissionVisionValues/MissionVisionValues.scss
@@ -25,7 +25,7 @@
           margin: 0 0 20px;
           font-weight: 400;
 
-          b{
+          b, strong{
             font-family: fonts.$Montserrat !important;
             color: #000;
           }
