--- a/resources/js/Pages/AboutUs/components/Sustainability/Sustainability.scss
+++ b/resources/js/Pages/AboutUs/components/Sustainability/Sustainability.scss
@@ -73,7 +73,7 @@
           font-size: 18px;
           line-height: 27px;
           color: #4D464A;
-          margin: 0;
+          margin: 0 0 20px;
         }
       }
       .img{
