--- a/resources/js/components/HeaderDescription/HeaderDescription.scss
+++ b/resources/js/components/HeaderDescription/HeaderDescription.scss
@@ -27,7 +27,7 @@
         color: #555454;
         font-size: 18px;
         line-height: 27px;
-        margin: 0;
+        margin: 0 0 20px;
       }
     }
   }
