form Tenho um terreno implementado

--- a/resources/js/components/HeaderBanner/HeaderBanner.scss
+++ b/resources/js/components/HeaderBanner/HeaderBanner.scss
@@ -1,5 +1,9 @@
 .header_banner{
-  .content{}
+  .content{
+    p{
+      margin: 0;
+    }
+  }
   .banner{
     position: relative;
     width: 100%;
