--- a/resources/js/Pages/Blog/components/BlogList/BlogList.scss
+++ b/resources/js/Pages/Blog/components/BlogList/BlogList.scss
@@ -1,6 +1,6 @@
 @use './../../../../Fonts.scss' as *;
 
-.ventures_list{
+.blog_list{
   padding: 0 0 80px;
 
   .content{
@@ -10,7 +10,7 @@
       gap: 40px 55px;
       padding: 0 0 50px;
 
-      .venture_item{
+      .blog_item{
         max-width: 380px;
       }
     }
@@ -25,7 +25,7 @@
       .list_content{
         gap: 30px 30px;
 
-        .venture_item{
+        .blog_item{
           width: calc((100% - 30px * 2) / 3);
         }
       }
@@ -36,7 +36,7 @@
 
     .content{
       .list_content{
-        .venture_item{
+        .blog_item{
           width: calc((100% - 30px) / 2);
         }
       }
@@ -47,7 +47,7 @@
       .list_content{
         justify-content: center;
 
-        .venture_item{
+        .blog_item{
           width: 100%;  
         }
       }
@@ -55,7 +55,7 @@
   }
 }
 
-.venture_item{
+.blog_item{
   width: 100%;
 
   &:last-child{
@@ -65,7 +65,7 @@
   .image{
     position: relative;
     width: 100%;
-    height: 250px;
+    height: 400px;
     margin: 0 0 5px;
     border-radius: 5px 5px 0 5px;
     overflow: hidden;
@@ -98,24 +98,24 @@
   }
   .item_content{
     position: relative;
-    height: calc(100% - 250px - 5px);
+    height: calc(100% - 400px - 5px);
     border-radius: 5px;
     background: #F5F5F5;
-    padding: 25px 30px 65px;
+    padding: 40px 30px 70px;
 
     h3{
       font-family: $Montserrat !important;
       text-transform: uppercase;
       font-weight: bold;
-      font-size: 19px;
-      line-height: 24px;
-      margin: 0 0 20px;
+      font-size: 21px;
+      line-height: 25px;
+      margin: 0 0 30px;
       color: #000;
     }
     .info{
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 15px;
 
       >div{
         width: 100%;
@@ -166,10 +166,10 @@
 
   @media (max-width: 1100px){
     .image{
-      height: 200px;
+      height: 300px;
     }
     .item_content{
-      height: calc(100% - 200px);
+      height: calc(100% - 300px);
       padding: 20px 20px 65px;
 
       h3{
