--- a/resources/js/Pages/Home/components/BannerCarousel/BannerCarousel.scss
+++ b/resources/js/Pages/Home/components/BannerCarousel/BannerCarousel.scss
@@ -65,7 +65,7 @@
           line-height: 52px;
           max-width: 460px;
           text-transform: uppercase;
-          margin: 0 0 40px;
+          margin: 0 0 0;
 
           b{
             font-weight: 700;
@@ -79,10 +79,11 @@
           font-weight: 400;
           line-height: 28px;
           max-width: 560px;
-          margin: 0 0 40px;
+          margin: 40px 0 0;
         }
 
         a{
+          margin: 40px 0 0;
           position: relative;
           z-index: 20;
           pointer-events: auto;
@@ -185,14 +186,17 @@
           h2{
             font-size: 38px;
             line-height: 47px;
-            margin: 0 0 25px;
+            margin: 0 0 0;
           }
 
           p{
             font-size: 18px;
             line-height: 26px;
             max-width: 540px;
-            margin: 0 0 30px;
+            margin: 25px 0 0;
+          }
+          a{
+            margin: 30px 0 0;
           }
 
         }
@@ -220,14 +224,17 @@
           h2{
             font-size: 30px;
             line-height: 41px;
-            margin: 0 0 15px;
+            margin: 0 0 0;
           }
 
           p{
             font-size: 16px;
             line-height: 25px;
             max-width: 400px;
-            margin: 0 0 25px;
+            margin: 15px 0 0;
+          }
+          a{
+            margin: 25px 0 0;
           }
 
         }
@@ -285,7 +292,9 @@
 
           p{
             line-height: 23px;
-            margin: 0 0 20px;
+          }
+          a{
+            margin: 20px 0 0;
           }
 
         }
