--- a/resources/js/Pages/Home/components/Blog/Blog.scss
+++ b/resources/js/Pages/Home/components/Blog/Blog.scss
@@ -2,7 +2,7 @@
 
 .blog_home{
   position: relative;
-  padding: 120px 0;
+  padding: 120px 0 100px;
 
   &:before{
     content: '';
@@ -30,7 +30,11 @@
     .swiper_content{
       width: 100%;
       max-width: 1197px;
-
+      padding: 0 0 30px;
+      
+      .swiper-pagination{
+        bottom: 0;
+      }
       .slide{
         width: 380px;
         margin: 0 28px 0 0;
@@ -39,54 +43,7 @@
           margin: 0;
         }
 
-        .item{
-          width: 100%;
-          overflow: hidden;
 
-          .image{
-            width: 100%;
-            height: 250px;
-            border-radius: 4px;
-            margin: 0 0 12px;
-            overflow: hidden;
-
-            img{
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-            }
-          }
-          p.data{
-            font-size: 13px;
-            line-height: 20px;
-            color: #112A25;
-            margin: 0 0 8px;
-          }
-          h3.title{
-            font-size: 20px;
-            line-height: 23px;
-            font-weight: 500;
-            margin: 0 0 8px;
-            color: #000;
-          }
-          p.description{
-            font-weight: 300;
-            font-size: 16px;
-            line-height: 24px;
-            color: #6f6f6f;
-            margin: 0 0 8px;
-          }
-          a{
-            font-weight: bold;
-            font-size: 14px;
-            line-height: 21px;
-            color: #173F35;
-            margin: 0;
-            text-decoration: underline;
-            padding: 0;
-            text-transform: initial;
-          }
-        }
       }
     }
   }
@@ -114,17 +71,6 @@
         .slide{
           width: 300px;
           margin: 0 15px 0 0;
-
-          .item{
-            .image{
-              height: 190px;
-            }
-            p.description{
-              font-size: 14px;
-              line-height: 22px;
-              margin: 0 0 5px;
-            }
-          }
         }
       }
     }
@@ -137,6 +83,66 @@
         font-size: 24px;
         line-height: 29px;
       }
+    }
+  }
+}
+
+.item{
+  width: 100%;
+  overflow: hidden;
+
+  .image{
+    width: 100%;
+    height: 250px;
+    border-radius: 4px;
+    margin: 0 0 12px;
+    overflow: hidden;
+
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  p.data{
+    font-size: 13px;
+    line-height: 20px;
+    color: #112A25;
+    margin: 0 0 8px;
+  }
+  h3.title{
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: 500;
+    margin: 0 0 8px;
+    color: #000;
+  }
+  p.description{
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    color: #6f6f6f;
+    margin: 0 0 8px;
+  }
+  a{
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 21px;
+    color: #173F35;
+    margin: 0;
+    text-decoration: underline;
+    padding: 0;
+    text-transform: initial;
+  }
+
+  @media (max-width: 850px){
+    .image{
+      height: 190px;
+    }
+    p.description{
+      font-size: 14px;
+      line-height: 22px;
+      margin: 0 0 5px;
     }
   }
 }
