--- a/resources/js/Pages/Home/components/Ventures/Ventures.scss
+++ b/resources/js/Pages/Home/components/Ventures/Ventures.scss
@@ -41,6 +41,7 @@
         width: 100%;
         max-width: 721px;
         margin: 0 auto 0 0;
+        padding: 0 0 40px;
       }
 
       .arrows{
@@ -70,7 +71,7 @@
     .flower{
       position: absolute;
       left: -190px;
-      bottom: 90px;
+      bottom: -70px;
     }
   }
 
