--- a/resources/js/Pages/Home/components/ProjectsMap/ProjectsMap.scss
+++ b/resources/js/Pages/Home/components/ProjectsMap/ProjectsMap.scss
@@ -23,9 +23,16 @@
         @include mixins.Title();
         margin: 0 0 90px;
       }
-      p{
-        @include mixins.Text();
-        margin: 0 0 40px;
+      .text{
+        padding: 0 0 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        p{
+          @include mixins.Text();
+          margin: 0 0 0;
+        }
       }
       .selectors{
         display: flex;
@@ -84,8 +91,9 @@
       .left{
         margin: 0 auto 40px;
 
-        p{
-          margin: 0 0 25px;
+        .text{
+          padding: 0 0 25px;
+          gap: 15px;
         }
         .selectors{
           flex-direction: column;
