--- a/resources/js/Pages/Home/components/Ventures/Ventures.scss
+++ b/resources/js/Pages/Home/components/Ventures/Ventures.scss
@@ -16,9 +16,16 @@
         @include mixins.Title();
         margin: 0 0 30px;
       }
-      p{
-        @include mixins.Text();
-        margin: 0 0 30px;
+      .text{
+        padding: 0 0 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        p{
+          @include mixins.Text();
+          margin: 0 0 0;
+        }
       }
       a{}
     }
@@ -113,7 +120,7 @@
         h2{
           margin: 0 0 10px;
         }
-        p{
+        .text{
           max-width: 400px;
         }
       }
@@ -148,6 +155,10 @@
     .content{
       .left{
         padding: 0 0 30px;
+
+        .text{
+          padding: 0 0 25px;
+        }
       }
       .right{
         padding: 0;
