--- a/resources/js/Pages/AboutUs/components/AboutVentures/AboutVentures.scss
+++ b/resources/js/Pages/AboutUs/components/AboutVentures/AboutVentures.scss
@@ -83,6 +83,7 @@
             .image{
               width: 100%;
               height: 200px;
+              margin: 0;
   
               img{
                 width: 100%;
