--- a/resources/js/Pages/Venture/components/VentureHeader/VentureHeader.scss
+++ b/resources/js/Pages/Venture/components/VentureHeader/VentureHeader.scss
@@ -35,17 +35,22 @@
       .logo{
         position: absolute;
         right: 105px;
-        width: 162px;
-        height: 162px;
+        width: 130px;
+        height: 130px;
         border-radius: 4px;
         border: 1px solid #EEEEEE;
         background: #fff;
-        top: -80px;
+        top: -40px;
         z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         img{
           width: 100%;
           height: 100%;
+          max-width: 80px;
+          max-height: 80px;
           object-fit: contain;
         }
       }
@@ -78,8 +83,6 @@
 
         .logo{
           right: 30px;
-          width: 130px;
-          height: 130px;
           top: -50px;
         }
       }
@@ -117,8 +120,8 @@
       .bottom{
         .logo{
           right: initial;
-          width: 160px;
-          height: 160px;
+          width: 130px;
+          height: 130px;
           top: 20px;
           left: 50%;
           transform: translate(-50%, -50%);
