--- a/resources/js/Pages/AboutUs/components/AboutVentures/AboutVentures.scss
+++ b/resources/js/Pages/AboutUs/components/AboutVentures/AboutVentures.scss
@@ -42,6 +42,7 @@
       .swiper{
         padding-left: 20px;
         padding-right: 20px;
+        padding-bottom: 45px;
         left: -20px;
         width: calc(100% + 40px);
 
